# QtLlamaChat

./: .gitignore  CMakeLists.txt  README.md
src/: ChatWorker.cpp  ChatWorker.h  LlamaBackend.cpp  LlamaBackend.h  Main.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui
